fix overflowing buttons in move log

--- a/src/Components/Game.module.css
+++ b/src/Components/Game.module.css
@@ -37,7 +37,7 @@
     margin-top: 30px;
     margin-bottom: 30px;
 
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
 }
 
 .options {
